--- a/CustomView/app/src/main/res/layout/activity_rxjava_animation.xml
+++ b/CustomView/app/src/main/res/layout/activity_rxjava_animation.xml
@@ -4,10 +4,34 @@
     android:id="@+id/activity_rxjava_animation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="view.custom.shrimpcolo.com.customview.RxjavaAnimation.RxjavaAnimation">
+
+    <view.custom.shrimpcolo.com.customview.FlowLayout
+        android:id="@+id/flowlayout_stub"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#EEEE00" />
+
+    <view.custom.shrimpcolo.com.customview.FlowLayout
+        android:id="@+id/flowlayout_pink"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:background="#EE7AE9" />
+
+    <View
+        android:id="@+id/middle_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/flowlayout_pink"
+        android:layout_below="@id/flowlayout_stub" />
+
+    <view.custom.shrimpcolo.com.customview.FlowLayout
+        android:id="@+id/flowlayout_yellow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:background="@android:color/transparent" />
 
 </RelativeLayout>
