--- a/MyTodo/app/src/main/res/layout/tasks_app_bar.xml
+++ b/MyTodo/app/src/main/res/layout/tasks_app_bar.xml
@@ -24,11 +24,12 @@
     <include layout="@layout/tasks_content" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_add"
+        app:fabSize="normal" />
 
 </android.support.design.widget.CoordinatorLayout>
