--- a/MyTodo/app/src/main/res/layout/tasks_content.xml
+++ b/MyTodo/app/src/main/res/layout/tasks_content.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.shrimpcolo.www.mytodo.TasksActivity"
+    tools:context="com.shrimpcolo.www.mytodo.tasks.TasksActivity"
     tools:showIn="@layout/tasks_app_bar">
 
     <FrameLayout
