--- a/TodoKotlin/app/src/main/res/layout/activity_main.xml
+++ b/TodoKotlin/app/src/main/res/layout/activity_main.xml
@@ -21,21 +21,33 @@
         android:id="@+id/btnAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="addTask" />
+        android:text="@string/task_add" />
 
 
     <Button
         android:id="@+id/btnQueryTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="queryTasks" />
+        android:text="@string/task_query_all" />
 
 
     <Button
         android:id="@+id/btnQueryOneTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="queryOneTasks" />
+        android:text="@string/task_query_one" />
+
+    <Button
+        android:id="@+id/btnDeleteAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/task_delete_all" />
+
+    <Button
+        android:id="@+id/btnDeleteOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/task_delete_one" />
 
     <LinearLayout
         android:id="@+id/container"
@@ -43,5 +55,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     </LinearLayout>
+
+
 
 </LinearLayout>
